# department-tools

./: CLAUDE.md  README.md  eslint.config.base.js  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json  tsconfig.nest.json  tsconfig.react.json
apps/backend/: .env.example  package.json  seed-bidding.ts  seed.ts  tsconfig.json
apps/backend/prisma/: schema.prisma
apps/backend/src/: app.module.ts  main.ts
apps/frontend/: eslint.config.js  index.html  package.json  tsconfig.app.json  tsconfig.node.json
apps/frontend/src/: routeTree.gen.ts
backend/: .env.example  .gitignore  pyproject.toml  seed.py
backend/app/: config.py  main.py
backend/app/db/: base.py  session.py
backend/app/models/: __init__.py  analysis.py  dimension.py  enums.py  monitor.py  product.py  raw_data.py
backend/app/routers/: monitor.py  product.py
backend/app/schemas/: bidding.py  monitor.py  product.py  response.py
backend/app/services/: justone.py  price_monitor.py  product_analyzer.py  url_parser.py
docker/: docker-compose.yml
docs/: 价格检测.md
docs/superpowers/plans/: 2026-07-03-dept-tools-platform-plan.md
docs/superpowers/specs/: 2026-07-03-dept-tools-platform-design.md  2026-07-03-pages-requirements.md  2026-07-08-user-auth-design.md
frontend/: package.json
frontend/src/: main.tsx
frontend/src/api/: bidding.ts  client.ts  price.ts
frontend/src/components/: ChartCard.tsx  PageHeader.tsx  StatCard.tsx
testApi/: package-lock.json  package.json  server.js
testApi/mock/: dy_search.json  jd_search.json  taobao_search.json
(+121 files in other folders)
